<resources>
    <string name="app_name">Constrain Layout</string>
    <string name="tEmail">Email</string>
    <string name="judul">Aplikasi Alvamart</string>
    <string name="Login">L O G I N</string>
    <string name="tPassword">Password</string>
    <string name="bSignin">Sign-In</string>
    <string name="tData">Data Anda</string>
    <string name="tEml">Email :</string>
    <string name="tPswd">Password: </string>
    <string name="txEmail">Ini hasil Email</string>
    <string name="txPwd">Ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lDaftar">Daftar</string>
    <string name="eNama">Masukkan Nama</string>
    <string name="eEmail">Masukkan Email</string>
    <string name="ePass">Masukkan Password</string>
    <string name="erePass">Masukkan Password Kembali</string>
    <string name="eAlamat">Masukkan Alamat</string>

    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
</resources>